Fix deprecations in java 9